--- a/Task-2-ML/README.me
+++ b/Task-2-ML/README.me
@@ -1,1 +1,81 @@
+# CodTech Data Analysis Internship – Task 2
 
+## Domain:
+Data Analytics
+
+## Company Name:
+Codtech IT Solutions Private Limited
+
+## Intern Name:
+Manasvi Tilaji Parab
+
+## Intern ID:
+CTIS1170
+
+## Internship Duration:
+26 December 2025 - 23 January 2026
+
+## Mentor Name:
+Neela Santhosh Kumar.
+
+## Task Description (Task–2):
+
+This repository contains the work completed for **Task–2** of the CodTech Data Analysis Internship.  
+The objective of this task was to perform **predictive analysis using machine learning techniques** to analyze data and predict outcomes based on selected features.
+
+---
+
+## Dataset Used:
+The **Student Performance Dataset** was used for this task.
+
+
+
+This dataset was suitable for applying **classification-based machine learning models**.
+
+---
+
+## Tools and Technologies Used:
+
+- **Python** – Programming language  
+- **Jupyter Notebook** – Development environment  
+- **Pandas** – Data manipulation and analysis  
+- **NumPy** – Numerical computations  
+- **Matplotlib** – Data visualization  
+- **Scikit-learn** – Machine learning library  
+- **GitHub** – Version control and project hosting  
+
+---
+
+## Methodology:
+
+1. The dataset was loaded into Jupyter Notebook using Pandas.
+2. Initial data exploration and cleaning were performed.
+3. A target variable (**Pass / Fail**) was created based on student scores.
+4. Feature selection was carried out using:
+   - Math score  
+   - Reading score  
+   - Writing score  
+5. The dataset was split into training and testing sets.
+6. A **Logistic Regression** model was trained.
+7. Model performance was evaluated using:
+   - Accuracy score  
+   - Confusion matrix  
+   - Classification report  
+
+---
+
+## Analysis and Insights:
+
+The predictive analysis focused on:
+- Identifying patterns in student academic performance
+- Predicting whether a student would **Pass or Fail**
+
+Key insights obtained include:
+- Academic scores strongly influence student outcomes.
+- Logistic Regression performed effectively for classification.
+- The model achieved good accuracy on unseen test data.
+- Feature selection played an important role in improving predictions.
+
+---
+
+## OUTPUT:
