Add output images to README
Added multiple output images to the README.

--- a/Task-2-ML/README.me
+++ b/Task-2-ML/README.me
@@ -79,3 +79,9 @@ Key insights obtained include:
 ---
 
 ## OUTPUT:
+<img width="1597" height="664" alt="Image" src="https://github.com/user-attachments/assets/23149884-1cec-4180-8f7b-ee9bbad1286f" />
+<img width="1127" height="513" alt="Image" src="https://github.com/user-attachments/assets/fa354b14-b273-4a4e-8a4e-71bdb68d7352" />
+<img width="1012" height="546" alt="Image" src="https://github.com/user-attachments/assets/bedb434b-91a0-4457-9b9b-916b245a6ab3" />
+<img width="1353" height="466" alt="Image" src="https://github.com/user-attachments/assets/c269b197-aa08-4ddd-98ff-bfe74393a494" />
+<img width="1383" height="438" alt="Image" src="https://github.com/user-attachments/assets/7ca5a0db-c919-4313-bbf1-19de5aa14273" />
+<img width="1764" height="650" alt="Image" src="https://github.com/user-attachments/assets/09f8724e-cf22-48d9-adda-e93e715bff92" />
