Improve formatting in README.me for Task 2
Updated README.me to enhance formatting and clarity.

--- a/Task-2-ML/README.me
+++ b/Task-2-ML/README.me
@@ -1,31 +1,31 @@
-# CodTech Data Analysis Internship – Task 2
+# **CodTech Data Analysis Internship – Task 2**
 
-## Domain:
+## **Domain:**
 Data Analytics
 
-## Company Name:
+## **Company Name:**
 Codtech IT Solutions Private Limited
 
-## Intern Name:
+## **Intern Name:**
 Manasvi Tilaji Parab
 
-## Intern ID:
+## **Intern ID:**
 CTIS1170
 
-## Internship Duration:
+## **Internship Duration:**
 26 December 2025 - 23 January 2026
 
-## Mentor Name:
+## **Mentor Name:**
 Neela Santhosh Kumar.
 
-## Task Description (Task–2):
+## **Task Description (Task–2):**
 
 This repository contains the work completed for **Task–2** of the CodTech Data Analysis Internship.  
 The objective of this task was to perform **predictive analysis using machine learning techniques** to analyze data and predict outcomes based on selected features.
 
 ---
 
-## Dataset Used:
+## **Dataset Used:**
 The **Student Performance Dataset** was used for this task.
 
 
@@ -34,7 +34,7 @@ This dataset was suitable for applying **classification-based machine learning m
 
 ---
 
-## Tools and Technologies Used:
+## **Tools and Technologies Used:**
 
 - **Python** – Programming language  
 - **Jupyter Notebook** – Development environment  
@@ -46,7 +46,7 @@ This dataset was suitable for applying **classification-based machine learning m
 
 ---
 
-## Methodology:
+## **Methodology:**
 
 1. The dataset was loaded into Jupyter Notebook using Pandas.
 2. Initial data exploration and cleaning were performed.
@@ -64,7 +64,7 @@ This dataset was suitable for applying **classification-based machine learning m
 
 ---
 
-## Analysis and Insights:
+## **Analysis and Insights:**
 
 The predictive analysis focused on:
 - Identifying patterns in student academic performance
@@ -78,7 +78,7 @@ Key insights obtained include:
 
 ---
 
-## OUTPUT:
+## **OUTPUT:**
 <img width="1597" height="664" alt="Image" src="https://github.com/user-attachments/assets/23149884-1cec-4180-8f7b-ee9bbad1286f" />
 <img width="1127" height="513" alt="Image" src="https://github.com/user-attachments/assets/fa354b14-b273-4a4e-8a4e-71bdb68d7352" />
 <img width="1012" height="546" alt="Image" src="https://github.com/user-attachments/assets/bedb434b-91a0-4457-9b9b-916b245a6ab3" />
